fix: Sidebar collapse; add edit, delete activities API

--- a/client/src/admin/layouts/AdminLayout/AdminLayout.module.scss
+++ b/client/src/admin/layouts/AdminLayout/AdminLayout.module.scss
@@ -1,21 +1,16 @@
 .admin-layout {
+  display: flex;
   height: 100vh;
-  overflow: hidden;
-  display: grid;
-  grid-template-columns: 250px 1fr;
 
   &__sidebar {
-    width: 250px;
     transition: width 0.3s ease;
-    overflow: hidden;
-    box-shadow: 2px 0 8px rgba(0, 0, 0, 0.1);
-
-    &--closed {
-      width: 80px;
-    }
 
     &--open {
       width: 250px;
+    }
+
+    &--closed {
+      width: 80px;
     }
   }
 
